--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,9 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ *= require 'bootstrap/css/bootstrap.min.css.scss'
+ *= require 'bootstrap/css/bootstrap-theme.min.css'
+ *= require 'starter-template.css'
  *= require_tree .
  *= require_self
  */
