--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,33 +1,38 @@
-<p id="notice"><%= notice %></p>
+<div class="container-fluid">
+  <div style="margin:20px 0 20px">
+    <div class="row">
+      <div class="col-md-12">
+        <p id="notice"><%= notice %></p>
 
-<h1>Listing Matches</h1>
+        <h1>Listing Matches</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>League</th>
-      <th>Season</th>
-      <th>Datetime</th>
-      <th>Title</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+        <table class="display table" cellspacing="0" width="100%">
+          <thead>
+            <tr>
+              <th>Title</th>
+              <th>League</th>
+              <th>Season</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
 
-  <tbody>
-    <% @matches.each do |match| %>
-      <tr>
-        <td><%= match.league %></td>
-        <td><%= match.season %></td>
-        <td><%= match.datetime %></td>
-        <td><%= match.title %></td>
-        <td><%= link_to 'Show', match %></td>
-        <td><%= link_to 'Edit', edit_match_path(match) %></td>
-        <td><%= link_to 'Destroy', match, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+          <tbody>
+            <% @matches.each do |match| %>
+              <tr>
+                <td><%= match.title %></td>
+                <td><%= match.league.upcase if match.league %></td>
+                <td><%= match.season %></td>
+                <td><%= link_to 'Show', match %></td>
+                <td><%= link_to 'Destroy', match, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
 
-<br>
+        <br>
 
-<%= link_to 'New Match', new_match_path %>
+        <% link_to 'New Match', new_match_path %>
+      </div>
+    </div>
+  </div>
+</div>
