--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,27 +1,35 @@
-<p id="notice"><%= notice %></p>
+<div class="container-fluid">
+  <div style="margin:20px 0 20px">
+    <div class="row">
+      <div class="col-md-6">
+        <p id="notice"><%= notice %></p>
 
-<h1>Listing Teams</h1>
+        <h1>Listing Teams</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+        <table class="display table" cellspacing="0" width="100%">
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
 
-  <tbody>
-    <% @teams.each do |team| %>
-      <tr>
-        <td><%= team.name %></td>
-        <td><%= link_to 'Show', team %></td>
-        <td><%= link_to 'Edit', edit_team_path(team) %></td>
-        <td><%= link_to 'Destroy', team, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+          <tbody>
+            <% @teams.each do |team| %>
+              <tr>
+                <td><%= team.name %></td>
+                <td><%= link_to 'Show', team %></td>
+                <td><%= link_to 'Edit', edit_team_path(team) %></td>
+                <td><%= link_to 'Destroy', team, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
 
-<br>
+        <br>
 
-<%= link_to 'New Team', new_team_path %>
+        <% link_to 'New Team', new_team_path %>
+      </div>
+    </div>
+  </div>
+</div>
