--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
           <li><%= link_to 'Matches', matches_path %></li>
           <li><%= link_to 'Players', players_path %></li>
           <li><%= link_to 'Teams', teams_path %></li>
+          <li><%= link_to 'Tasks', tasks_path %></li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
