--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -10,6 +10,7 @@
           <thead>
             <tr>
               <th>Title</th>
+              <th>Date</th>
               <th>League</th>
               <th>Season</th>
               <th colspan="3"></th>
@@ -19,11 +20,11 @@
           <tbody>
             <% @matches.each do |match| %>
               <tr>
-                <td><%= match.title %></td>
+                <td><%= link_to match.title, match %></td>
+                <td><%= match.datetime %></td>
                 <td><%= match.league.upcase if match.league %></td>
                 <td><%= match.season %></td>
-                <td><%= link_to 'Show', match %></td>
-                <td><%= link_to 'Destroy', match, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                <td><%= link_to 'Delete', match, method: :delete, data: { confirm: 'Are you sure?' } %></td>
               </tr>
             <% end %>
           </tbody>
