--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -10,7 +10,7 @@
           <thead>
             <tr>
               <th>Name</th>
-              <th colspan="3"></th>
+              <th>Team</th>
             </tr>
           </thead>
 
@@ -18,9 +18,7 @@
             <% @players.each do |player| %>
               <tr>
                 <td><%= player.name %></td>
-                <td><%= link_to 'Show', player %></td>
-                <td><%= link_to 'Edit', edit_player_path(player) %></td>
-                <td><%= link_to 'Destroy', player, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                <td><%= player.team.name %></td>
               </tr>
             <% end %>
           </tbody>
@@ -28,7 +26,7 @@
 
         <br>
 
-        <% link_to 'New Player', new_player_path %>
+        <%= paginate @players %>
       </div>
     </div>
   </div>
