--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -4,8 +4,34 @@
       <div class="col-md-12">
         <p id="notice"><%= notice %></p>
 
-        <h1>Listing Matches</h1>
+        <h1>Ongoing Matches</h1>
 
+        <table class="display table" cellspacing="0" width="100%">
+          <thead>
+            <tr>
+              <th>Title</th>
+              <th>Date</th>
+              <th>League</th>
+              <th>Season</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <% @ongoing_matches.each do |match| %>
+              <tr>
+                <td><%= link_to match.title, match %></td>
+                <td><%= match.datetime %></td>
+                <td><%= match.league.upcase if match.league %></td>
+                <td><%= match.season %></td>
+                <td><%= link_to 'Delete', match, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+        
+        <h1>Finished Matches</h1>
+        <%= paginate @matches %>
         <table class="display table" cellspacing="0" width="100%">
           <thead>
             <tr>
@@ -30,9 +56,6 @@
           </tbody>
         </table>
 
-        <br>
-
-        <% link_to 'New Match', new_match_path %>
       </div>
     </div>
   </div>
