--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -5,27 +5,25 @@
         <p id="notice"><%= notice %></p>
 
         <h1>Listing Teams</h1>
-
+        <%= paginate @teams %>
         <table class="display table" cellspacing="0" width="100%">
           <thead>
             <tr>
               <th>Name</th>
-              <th colspan="3"></th>
+              <th>Action</th>
             </tr>
           </thead>
 
           <tbody>
             <% @teams.each do |team| %>
               <tr>
-                <td><%= team.name %></td>
+                <td><%= link_to team.name, team.url, :target => "_blank" %></td>
+                <td><%= link_to 'Delete', team, method: :delete, data: { confirm: 'Are you sure?' } %></td>
               </tr>
             <% end %>
           </tbody>
         </table>
-
-        <br>
-
-        <% link_to 'New Team', new_team_path %>
+        <%= paginate @teams %>
       </div>
     </div>
   </div>
