--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -13,6 +13,7 @@
               <th>Date</th>
               <th>League</th>
               <th>Season</th>
+              <th>Y! Sports</th>
               <th colspan="3"></th>
             </tr>
           </thead>
@@ -24,12 +25,13 @@
                 <td><%= match.datetime %></td>
                 <td><%= match.league.upcase if match.league %></td>
                 <td><%= match.season %></td>
+                <td><%= link_to 'Y! Sports', match.url, target: '_blank' %></td>
                 <td><%= link_to 'Delete', match, method: :delete, data: { confirm: 'Are you sure?' } %></td>
               </tr>
             <% end %>
           </tbody>
         </table>
-        
+        <hr />
         <h1>Finished Matches</h1>
         <%= paginate @matches %>
         <table class="display table" cellspacing="0" width="100%">
@@ -39,6 +41,7 @@
               <th>Date</th>
               <th>League</th>
               <th>Season</th>
+              <th>Y! Sports</th>
               <th colspan="3"></th>
             </tr>
           </thead>
@@ -50,6 +53,7 @@
                 <td><%= match.datetime %></td>
                 <td><%= match.league.upcase if match.league %></td>
                 <td><%= match.season %></td>
+                <td><%= link_to 'Y! Sports', match.url, target: '_blank' %></td>
                 <td><%= link_to 'Delete', match, method: :delete, data: { confirm: 'Are you sure?' } %></td>
               </tr>
             <% end %>
